hphp/test/zend/good/ext/zlib/tests/bug61443.php.skipif
<?hh
extension_loaded("zlib") or die("skip");
