hphp/test/zend/bad/ext/zlib/tests/bug61820.php.skipif
<?php
extension_loaded("zlib") or die("skip");
?>